--- a/style/typography.css
+++ b/style/typography.css
@@ -1,119 +1,59 @@
-
-/* TYPOGRAPHY */
-/* ----------------------------------------- */
-
-/* This helps to identify headings at the initial build stage, so I thought it'd be useful to have it */
-h1, h2, h3, h5, h5, h6 { font-weight:bold } 
-
-h1{
-	font-size: 28px;
-	line-height: 36px;
+h1,
+h2,
+h3,
+h5,
+h5,
+h6 {
+  font-weight: bold;
 }
-h2{
-	font-size: 22px;
-	line-height: 28px;
+h1 {
+  font-size: 28px;
+  line-height: 36px;
 }
-h3{
-	font-size: 18px;
-	line-height: 24px;
+h2 {
+  font-size: 22px;
+  line-height: 28px;
 }
-h4{
-	font-size: 16px;
-	line-height: 22px;
+h3 {
+  font-size: 18px;
+  line-height: 24px;
 }
-
-h2{
-font-size: 1.4em;
-color: #1f1f1f;
-margin-bottom: 10px;
+h4 {
+  font-size: 16px;
+  line-height: 22px;
 }
-
-p, .wp-caption, .wp-caption-dd, .databoxpage, .post-content, .tweet_list{
-	font-family: "Calibri",Arial,Verdana,sans-serif;
-	font-size: 15px;	
-	line-height: 21px;
+h2 {
+  font-size: 1.4em;
+  color: #1f1f1f;
+  margin-bottom: 10px;
 }
-.post-content, .post-content p{
-	line-height: 18px;
+p,
+.wp-caption,
+.wp-caption-dd,
+.databoxpage,
+.post-content,
+.tweet_list {
+  font-family: "Calibri", Arial, Verdana, sans-serif;
+  font-size: 15px;
+  line-height: 21px;
 }
-a{
-	color: #ff731c;
-	text-decoration: none;
+.post-content,
+.post-content p {
+  line-height: 18px;
 }
-p a:hover{
-	background-color: #ff731c;
-	color: white;
+a {
+  color: #ff731c;
+  text-decoration: none;
 }
-.first{
-	color: red;
-	font-style: italic;
+p a:hover {
+  background-color: #ff731c;
+  color: #fff;
 }
-.first:hover{
-	text-decoration: underline;
-	background: none;
+.first {
+  color: #f00;
+  font-style: italic;
 }
-
-
-/* Font stack options
-
-	The following represents a list of font stacks, as recommended by Nathan Ford in
-	http://unitinteractive.com/blog/2008/06/26/better-css-font-stacks/
-
-	I've added inverted commas around the relevant family names to ensure compatibility.
-	p = balanced for paragraphs or body copy
-	t = balanced for headlines or titles
-
-	- - - -
-
-Arial, 'Helvetica Neue', Helvetica, sans-serif - p, t
-
-Baskerville, 'Times New Roman', Times, serif - p
-Baskerville, 'Times, Times New Roman', serif - t
-
-Cambria, Georgia, Times, 'Times New Roman', serif - p, t
-'Century Gothic', 'Apple Gothic', sans-serif - p, t
-
-Consolas, 'Lucida Console', Monaco, monospace - p, t
-
-'Copperplate Light', 'Copperplate Gothic Light', serif - p, t
-
-'Courier New', Courier, monospace - p, t
-
-'Franklin Gothic Medium', 'Arial Narrow Bold', Arial, sans-serif - p, t
-
-Futura, 'Century Gothic', 'Apple Gothic', sans-serif - p, t
-
-Garamond, 'Hoefler Text', 'Times New Roman', Times, serif - p
-Garamond, 'Hoefler Text', Palatino, 'Palatino Linotype', serif - t
-
-Geneva, 'Lucida Sans', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif - p
-Geneva, Verdana, 'Lucida Sans', 'Lucida Grande', 'Lucida Sans Unicode', sans-serif - t
-
-Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif - p
-Georgia, Times, 'Times New Roman', serif - t
-
-GillSans, Calibri, Trebuchet, sans-serif - p
-GillSans, Trebuchet, Calibri, sans-serif - t
-
-'Helvetica Neue', Arial, Helvetica, sans-serif - p
-Helvetica, 'Helvetica Neue', Arial, sans-serif - t
-
-Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif - p, t
-
-'Lucida Sans', 'Lucida Grande', 'Lucida Sans Unicode', sans-serif - p, t
-
-Palatino, 'Palatino Linotype', Georgia, Times, 'Times New Roman', serif - p
-Palatino, 'Palatino Linotype', 'Hoefler Text', Times, 'Times New Roman', serif - t
-
-Tahoma, Geneva, Verdana - p
-Tahoma, Verdana, Geneva - t
-
-Times, 'Times New Roman', Georgia, serif - p, t
-
-Trebuchet, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif - p
-Trebuchet, Tahoma, Arial, sans-serif - t
-
-Verdana, Geneva, Tahoma, sans-serif - p
-Verdana, Tahoma, Geneva, sans-serif - t
-
-*/
+.first:hover {
+  text-decoration: underline;
+  background: none;
+}
